--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "version": "0.1.0",
   "author": "Dan Courtness <danielcourtness@gmail.com>",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby clean && gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "clean": "gatsby clean",
+    "dev": "gatsby develop -H 0.0.0.0",
+    "build": "run-p build:**",
+    "build:app": "gatsby build",
+    "build:lambda": "netlify-lambda build src/lambda"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "autoprefixer": "^9.7.1",
     "dotenv": "^8.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -46,7 +46,8 @@
     "react-helmet": "^5.2.1",
     "react-particles-js": "^2.6.0",
     "react-transition-group": "^4.0.0",
-    "sharp": "^0.22.1"
+    "sharp": "^0.22.1",
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
