--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-netlify-template",
+  "name": "gatsby-netlify",
   "private": true,
   "description": "Gatsby Netlify Template Repository",
   "license": "MIT",
