--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "autoprefixer": "^9.7.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
@@ -23,10 +23,11 @@
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-netlify-cms": "^4.0.0",
-    "gatsby-plugin-no-sourcemaps": "^2.1.1",
+    "gatsby-plugin-netlify-functions": "^0.0.3",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-purgecss": "^4.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-remark-copy-linked-files": "^2.1.3",
@@ -38,8 +39,10 @@
     "gatsby-transformer-sharp": "^2.1.18",
     "gatsby-transformer-yaml": "^2.1.12",
     "lazysizes": "^5.1.0",
+    "mailchimp-api-v3": "^1.13.1",
     "netlify-cms-app": "^2.9.1",
     "node-sass": "^4.12.0",
+    "nodemailer": "^6.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
