--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "lazysizes": "^5.1.0",
     "mailchimp-api-v3": "^1.13.1",
     "netlify-cms-app": "^2.9.1",
+    "netlify-lambda": "^1.6.3",
     "node-sass": "^4.12.0",
     "nodemailer": "^6.4.2",
+    "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
