--- a/package.json
+++ b/package.json
@@ -56,12 +56,18 @@
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "gatsby-plugin-netlify-functions": "^0.0.3",
     "gatsby-plugin-root-import": "^2.0.5",
+    "postcss-import": "^12.0.1",
     "prettier": "^1.17.0"
   }
 }
