--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.10.5",
+    "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-netlify-cms": "^4.0.0",
