--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "clean": "gatsby clean",
     "dev": "gatsby develop -H 0.0.0.0",
-    "build": "run-p build:**",
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build": "gatsby build && netlify-lambda build src/lambda",
     "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda"
   },
@@ -39,6 +42,7 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
     "gatsby-transformer-yaml": "^2.1.12",
+    "http-proxy-middleware": "^0.20.0",
     "lazysizes": "^5.2.0",
     "mailchimp-api-v3": "^1.13.1",
     "netlify-cms-app": "^2.9.1",
@@ -54,7 +58,8 @@
     "react-particles-js": "^2.6.0",
     "react-transition-group": "^4.0.0",
     "sharp": "^0.22.1",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "underscore": "^1.9.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
