LAM, Fluff, PSS baselines

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,33 +9,85 @@ media_folder: static/uploads
 public_folder: uploads
 
 collections:
-  - name: "pages"
-    label: "Pages"
+  - name: pages
+    label: Pages
     editor:
       preview: false
     files:
-      - file: "src/pages/index.md"
-        label: "Home"
-        name: "home"
+      - file: src/pages/index.md
+        label: Home
+        name: home
         fields:
-          - label: "Template Key"
-            name: "templateKey"
-            widget: "hidden"
-            default: "index-page"
+          - label: Template Key
+            name: templateKey
+            widget: hidden
+            default: index-page
 
-          - label: "Title"
-            name: "title"
-            widget: "string"
-            hint: "This is used both by the title meta tag, and by a hidden <h1> tag in the home page HTML."
+          - label: Title
+            name: title
+            widget: string
+            hint: This is used both by the title meta tag and the <h1> tag in the HTML.
 
-          - label: "SEO Description"
-            name: "description"
+          - label: SEO Description
+            name: description
             required: false
-            widget: "string"
-            hint: "This is used by the description meta tag."
+            widget: string
+            hint: This is used by the description meta tag.
 
-          - label: "SEO Keywords"
-            name: "keywords"
+          - label: SEO Keywords
+            name: keywords
             required: false
-            widget: "string"
-            hint: "This is used by the keywords meta tag."
+            widget: string
+            hint: This is used by the keywords meta tag.
+
+      - file: src/pages/about/index.md
+        label: About
+        name: about
+        fields:
+          - label: Template Key
+            name: templateKey
+            widget: hidden
+            default: about-page
+
+          - label: Title
+            name: title
+            widget: string
+            hint: This is used both by the title meta tag and the <h1> tag in the HTML.
+
+          - label: SEO Description
+            name: description
+            required: false
+            widget: string
+            hint: This is used by the description meta tag.
+
+          - label: SEO Keywords
+            name: keywords
+            required: false
+            widget: string
+            hint: This is used by the keywords meta tag.
+
+      - file: src/pages/contact/index.md
+        label: Contact
+        name: contact
+        fields:
+          - label: Template Key
+            name: templateKey
+            widget: hidden
+            default: contact-page
+
+          - label: Title
+            name: title
+            widget: string
+            hint: This is used both by the title meta tag and the <h1> tag in the HTML.
+
+          - label: SEO Description
+            name: description
+            required: false
+            widget: string
+            hint: This is used by the description meta tag.
+
+          - label: SEO Keywords
+            name: keywords
+            required: false
+            widget: string
+            hint: This is used by the keywords meta tag.
