--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:lambda": "netlify-lambda build src/lambda"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@reach/router": "^1.2.1",
     "autoprefixer": "^9.7.1",
     "dotenv": "^8.2.0",
@@ -59,7 +60,8 @@
     "react-transition-group": "^4.0.0",
     "sharp": "^0.22.1",
     "tailwindcss": "^1.1.3",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "uuidv4": "^6.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
