--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "start": "run-p start:**",
     "start:app": "npm run develop",
     "start:lambda": "netlify-lambda serve src/lambda",
-    "build": "gatsby build && netlify-lambda build src/lambda",
-    "build:app": "gatsby build",
+    "build": "run-p start:**",
+    "build:app": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "build:lambda": "netlify-lambda build src/lambda"
   },
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "@reach/router": "^1.2.1",
     "autoprefixer": "^9.7.1",
+    "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "gatsby": "^2.10.5",
+    "gatsby": "^2.21.24",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-netlify": "^2.1.3",
@@ -54,10 +55,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-draggable": "^3.3.0",
     "react-helmet": "^5.2.1",
-    "react-particles-js": "^2.6.0",
-    "react-transition-group": "^4.0.0",
     "sharp": "^0.22.1",
     "tailwindcss": "^1.1.3",
     "underscore": "^1.9.2",
