--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-apiserver": "2.1.5",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
