--- a/env.example
+++ b/env.example
@@ -1,4 +1,5 @@
 MAILCHIMP_API_KEY=mc-api-key
+GATSBY_SOURCE_MODE=default
 GATSBY_SHOPIFY_STORE=my-store-name
 GATSBY_SHOPIFY_STOREFRONT_TOKEN=example-token
 GATSBY_SHOPIFY_API_KEY=example-key
