--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@glidejs/glide": "^3.4.1",
     "@reach/router": "^1.2.1",
     "autoprefixer": "^9.7.1",
+    "body-scroll-lock": "^3.0.1",
     "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.17.2",
@@ -23,6 +24,12 @@
     "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.21.24",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-bugherd": "^1.0.2",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
+    "gatsby-plugin-google-analytics": "^2.3.4",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-netlify-cms": "^4.0.0",
@@ -54,6 +61,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-plx": "^1.3.15",
     "sharp": "^0.22.1",
     "tailwindcss": "^1.1.3",
     "underscore": "^1.9.2",
