--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "gatsby clean",
     "dev": "gatsby develop -H 0.0.0.0",
     "build": "run-p build:**",
-    "build:app": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@emotion/styled": "^10.0.27",
     "@glidejs/glide": "^3.4.1",
     "@reach/router": "^1.2.1",
+    "animejs": "^3.2.0",
     "autoprefixer": "^9.7.1",
     "body-scroll-lock": "^3.0.1",
     "chalk": "^4.0.0",
@@ -43,12 +44,14 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-transition-link": "1.18.0",
     "gatsby-remark-copy-linked-files": "^2.1.3",
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-apiserver": "2.1.5",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-shopify": "^3.2.12",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
     "gatsby-transformer-yaml": "^2.1.12",
