Style, framework improvements

--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "private": true,
   "description": "Gatsby Netlify Template Repository",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "Dan Courtness <danielcourtness@gmail.com>",
   "scripts": {
     "clean": "gatsby clean",
     "dev": "gatsby develop -H 0.0.0.0",
     "build": "run-p build:**",
-    "build:app": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda"
   },
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "@reach/router": "^1.2.1",
     "autoprefixer": "^9.7.1",
-    "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -37,7 +36,6 @@
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-relative-images": "^0.2.2",
-    "gatsby-source-apiserver": "2.1.5",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.18",
