--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-transition-link": "1.18.0",
+    "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-remark-copy-linked-files": "^2.1.3",
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-lazy-load": "^1.0.2",
