--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "framer-motion": "^1.11.1",
     "gatsby": "^2.21.24",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-bugherd": "^1.0.2",
@@ -30,7 +31,7 @@
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.3.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-google-tagmanager": "^2.3.10",
     "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-netlify": "^2.1.3",
